// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get filtered topics when all filters are active 1`] = `
Array [
  Object {
    "filter": Array [
      "urn:filter:2",
    ],
    "id": "urn:topic:1",
  },
  Object {
    "filter": Array [
      "urn:filter:1",
    ],
    "id": "urn:topic:2",
  },
  Object {
    "filter": Array [
      "urn:filter:3",
    ],
    "id": "urn:topic:3",
  },
]
`;

exports[`get filtered topics when none filters are active 1`] = `
Array [
  Object {
    "filter": Array [
      "urn:filter:2",
    ],
    "id": "urn:topic:1",
  },
  Object {
    "filter": Array [
      "urn:filter:1",
    ],
    "id": "urn:topic:2",
  },
  Object {
    "filter": Array [
      "urn:filter:3",
    ],
    "id": "urn:topic:3",
  },
]
`;

exports[`get filtered topics with two of three filters active 1`] = `
Array [
  Object {
    "filter": Array [
      "urn:filter:1",
    ],
    "id": "urn:topic:2",
  },
  Object {
    "filter": Array [
      "urn:filter:3",
    ],
    "id": "urn:topic:3",
  },
]
`;

exports[`get filtered topics with two of three filters active 2`] = `
Array [
  Object {
    "filter": Array [
      "urn:filter:2",
      "urn:filter:1",
    ],
    "id": "urn:topic:2",
  },
  Object {
    "filter": Array [
      "urn:filter:3",
    ],
    "id": "urn:topic:3",
  },
]
`;

exports[`topicSelectors getSubjectMenu 1`] = `
Array [
  Object {
    "contentUri": "urn:article:1",
    "id": "urn:topic:1",
    "name": "Idéutvikling og mediedesign",
    "parent": "urn:subject:1",
    "subtopics": Array [
      Object {
        "id": "urn:topic:1_1",
        "name": "Mediedesign",
        "parent": "urn:topic:1",
        "subtopics": Array [],
      },
      Object {
        "contentUri": "urn:article:1_2",
        "id": "urn:topic:1_2",
        "name": "Idéutvikling",
        "parent": "urn:topic:1",
        "subtopics": Array [
          Object {
            "id": "urn:topic:1_2_1",
            "name": "Mediebransjen",
            "parent": "urn:topic:1_2",
            "subtopics": Array [],
          },
        ],
      },
    ],
  },
  Object {
    "id": "urn:topic:2",
    "name": "Mediekommunikasjon",
    "parent": undefined,
    "subtopics": Array [],
  },
]
`;
